assets/scss/components/main/_gutenberg.scss
@import "variables";
@import "./tables";
@import "./separators";

// === Buttons === //
.wp-block-button__link {

	@extend %nv-button-primary-no-border;
	@extend %nv-button;
}

.is-style-primary .wp-block-button__link {

	@extend %nv-button-primary;

	&:hover {

		@extend %nv-button-primary-hover;
	}
}

.is-style-secondary .wp-block-button__link {

	@extend %nv-button-secondary;

	&:hover {

		@extend %nv-button-secondary-hover;
	}
}

// === Alignments === //
.alignfull {
	width: 100vw;
	max-width: 100vw;
	margin-left: calc(50% - 50vw);
	margin-right: calc(50% - 50vw);
	padding: 0 7.5px;
}

.alignwide {
	width: 98vw;
	max-width: 98vw;
	margin-left: calc(50% - 49vw);
	margin-right: calc(50% - 49vw);
}

.nv-sidebar-left,
.nv-sidebar-right,
.wp-block-column,
.is-layout-constrained:not(.alignfull):not(.alignwide),
[class*="wp-block-"]:has(> [class*="wp-block-"]):not(.alignfull):not(.alignwide) {

	.alignfull,
	.alignwide {
		width: 100%;
		max-width: 100%;
		margin-left: auto;
		margin-right: auto;
	}
}

// === Quotes === //
blockquote {
	margin: $spacing-xl 0;
	border: solid var(--nv-text-color);
	border-width: 0 0 0 4px;
	padding: 0 0 0 $spacing-md;

	p {
		margin-bottom: $spacing-xs;
		font-size: $text-lg;
		font-style: italic;
	}

	cite {
		font-style: normal;
		font-size: $text-sm !important;
		font-weight: 600;
	}

	&.has-text-align-center {
		border: 0;
		padding: 0;
	}

	&.has-text-align-right {
		border-width: 0 4px 0 0;
		padding: 0 $spacing-md 0 0;
	}

	&.is-style-plain {
		border: 0;
		padding: 0;
	}
}

// === Pull Quotes === //
.wp-block-pullquote {
	margin: $spacing-lg 0;
	border: solid var(--nv-text-color);
	border-width: 4px 0;
	padding: $spacing-lg $spacing-md;

	p {
		font-size: $text-xl !important;
	}

	blockquote {
		padding: 0;
		border: 0;
	}

	&.alignleft {
		text-align: left;
	}

	&.alignright {
		text-align: right;
	}

	&.is-style-solid-color {
		background-color: var(--nv-light-bg);

		blockquote {
			text-align: inherit;
			max-width: 90%;
		}
	}
}


//<editor-fold desc="Verse">
.wp-block-verse {
	background-color: inherit;
	font-size: $text-lg;
	border: 0;
}

//</editor-fold>

@mixin gutenberg--laptop() {

	.alignwide {
		width: 70vw;
		max-width: 70vw;
		margin-left: calc(50% - 35vw);
		margin-right: calc(50% - 35vw);
	}
}

// === Login Block === //
.wp-block-loginout form p {
	display: grid;
	gap: 5px;
}

